--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,12 +8,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ]
-}
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2018", "dom"]
+  }
 }
