--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "cd ./server/ && node ./dist/server.js ",
-    "build": "cd ./server/ && npm run build && cd ../client/ && npm run build"
+    "build": "cd ./server/ && npm run build && cd ../client/ && npm run build",
+    "install": "cd ./server/ && npm i && cd ../client/ && npm i"
   },
   "repository": {
     "type": "git",
