--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -10,16 +10,13 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ],
-    "plugins": [{
-      "name": "@angular/language-service"
-    }]
+    "target": "es2015",
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2018", "dom"],
+    "plugins": [
+      {
+        "name": "@angular/language-service"
+      }
+    ]
   }
 }
