--- a/client/package.json
+++ b/client/package.json
@@ -14,14 +14,12 @@
     "@angular/core": "~8.0.0",
     "@angular/elements": "^8.0.0",
     "@angular/forms": "~8.0.0",
-    "@angular/http": "^7.2.15",
     "@angular/material": "^8.0.0",
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/pwa": "^0.13.9",
     "@angular/router": "~8.0.0",
     "@angular/service-worker": "^8.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.1.3",
     "angular-fontawesome": "^1.0.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
@@ -40,17 +38,17 @@
     "@angular/cli": "~8.0.0",
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~2.8.8",
+    "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
+    "@types/node": "~8.9.4",
+    "codelyzer": "^4.5.0",
+    "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
