--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/pwa": "^0.13.9",
     "@angular/router": "~8.0.0",
     "@angular/service-worker": "^8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.0",
     "angular-fontawesome": "^1.0.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
@@ -29,7 +30,7 @@
     "jquery": "^3.4.1",
     "ngx-cookie-service": "^2.1.0",
     "popper.js": "^1.15.0",
-    "rxjs": "~6.5.2",
+    "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
@@ -38,21 +39,21 @@
     "@angular/cli": "~8.0.0",
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
-    "@types/jasmine": "^3.3.13",
+    "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "^4.5.0",
-    "jasmine-core": "^3.4.0",
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.1.0",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "^2.0.1",
+    "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.4.5"
+    "tslint": "~5.15.0",
+    "typescript": "~3.4.3"
   },
   "license": "ISC"
 }
