--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,11 @@
   "name": "server",
   "version": "0.0.1",
   "scripts": {
-    "build": "webpack --concfig webpack.config.js --progress --colors"
+    "build": "webpack --config webpack.config.js --progress --colors"
   },
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
