--- a/client/angular.json
+++ b/client/angular.json
@@ -57,7 +57,10 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "client:build"
+            "browserTarget": "client:build",
+            "sslKey": "src/assets/cert/insg.key",
+            "sslCert": "src/assets/cert/insg.crt",
+            "ssl": true
           },
           "configurations": {
             "production": {
