--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Program",
-      "runtimeExecutable": "nodemon",
+      "runtimeExecutable": "node",
       "program": "${workspaceFolder}/server/dist/server.js",
       "restart": false
     }
