--- a/client/angular.json
+++ b/client/angular.json
@@ -58,8 +58,8 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "client:build",
-            "sslKey": "src/assets/cert/insg.key",
-            "sslCert": "src/assets/cert/insg.crt",
+            "sslKey": "src/assets/cert/certificate.crt",
+            "sslCert": "src/assets/cert/private.key",
             "ssl": true
           },
           "configurations": {
