--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "scripts": {
     "ng": "ng",
-    "build": "ng build"
+    "debug": "ng build --watch",
+    "build": "ng build --prod"
   },
   "private": true,
   "dependencies": {
