--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,5 +1,6 @@
 FROM  node:10
 
+RUN mkdir /root/insg 
 WORKDIR /root/insg
 
 COPY package*.json ./
@@ -8,4 +9,4 @@ COPY server/dist ./
 RUN npm install
 
 EXPOSE 80
-CMD ["node" "./dist/server.js"]
+CMD ["node" "./server.js"]
