--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "0.0.1",
   "scripts": {
+    "start": "node dist/server.js",
     "debug": "webpack --config webpack.config.js --colors --mode=development --watch",
     "build": "webpack --config webpack.config.js --progress --colors --mode=production"
   },
