--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,12 +1,12 @@
 FROM  node:10
 
 RUN mkdir /root/insg 
-WORKDIR /root/insg
 
+WORKDIR /root/insg
 COPY package*.json ./
 COPY dist ./
 
 RUN npm install
 
 EXPOSE 80
-CMD [ "npm", "start" ]
+CMD [ "node", "server.js" ]
