struct debug & dist folder

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /tmp
 /out-tsc
 /coverage
+/debug
 
 # dependencies
 /node_modules
@@ -22,7 +23,7 @@
 .classpath
 .c9/
 *.launch
-.settings/
+.settings
 *.sublime-workspace
 
 # IDE - VSCode
