--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "express-session": "^1.16.2",
     "mongodb": "^3.2.7",
     "nodemailer": "^6.2.1",
-    "oxford-dictionary": "^1.4.1"
+    "oxford-dictionary-api": "^1.0.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
