--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "mongodb": "^3.2.7",
-    "nodemailer": "^6.2.1",
-    "oxford-dictionary-api": "^1.0.1"
+    "nodemailer": "^6.2.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
