--- a/client/angular.json
+++ b/client/angular.json
@@ -58,10 +58,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "client:build",
-            "sslKey": "../sslforfree/certificate.crt",
-            "sslCert": "../sslforfree/private.key",
-            "ssl": true
+            "browserTarget": "client:build"
           },
           "configurations": {
             "production": {
