--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/express-session": "^1.15.13",
     "@types/mongodb": "^3.1.28",
     "@types/node": "^12.0.10",
+    "@types/nodemailer": "^6.2.0",
     "ts-loader": "^6.0.4",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
