--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,14 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-
     {
       "type": "node",
       "request": "launch",
       "name": "Launch Program",
       "runtimeExecutable": "node",
-      "program": "${workspaceFolder}/debug/server.js",
+      "program": "${workspaceFolder}/server/server.ts",
+      // "preLaunchTask": "tsc: build - tsconfig.json",
+      "outFiles": ["${workspaceFolder}/debug/*.js"],
       "restart": false
     }
   ]
