--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,12 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
-    "outDir": "./out-tsc",
+    "declaration": false,
+    "lib": ["es2018", "dom"],
     "module": "commonjs",
-    "sourceMap": true,
     "moduleResolution": "node",
-    "target": "es2015",
-    "lib": ["es2018", "dom"]
+    "outDir": "./out-tsc",
+    "sourceMap": true,
+    "target": "es2015"
   }
 }
