--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "mongodb": "^3.3.3",
-    "nodemailer": "^6.3.1"
+    "nodemailer": "^6.3.1",
+    "sqlite3": "^4.1.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -35,6 +36,7 @@
     "@types/mongodb": "^3.3.6",
     "@types/node": "^12.11.1",
     "@types/nodemailer": "^6.2.1",
+    "@types/sqlite3": "^3.1.5",
     "ts-loader": "^6.2.0",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
