--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,8 +6,13 @@
     "lib": ["es2018", "dom"],
     "module": "commonjs",
     "moduleResolution": "node",
+    "noImplicitAny": true,
     "outDir": "../debug",
+    "preserveConstEnums": true,
+    "removeComments": true,
     "sourceMap": true,
     "target": "es5"
-  }
+  },
+  "include": ["./**/*"],
+  "exclude": ["node_modules", "**/*.spec.ts", "obsolete"]
 }
