--- a/client/package.json
+++ b/client/package.json
@@ -21,12 +21,13 @@
     "@angular/pwa": "^0.13.9",
     "@angular/router": "~8.2.11",
     "@angular/service-worker": "^8.2.11",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
-    "angular-fontawesome": "^1.0.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "document-register-element": "^1.13.2",
-    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ngx-cookie-service": "^2.1.0",
