--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "ng": "ng",
-    "debug": "ng build --watch",
+    "debug": "ng build",
     "build": "ng build --prod"
   },
   "private": true,
@@ -14,6 +14,7 @@
     "@angular/compiler": "~8.2.11",
     "@angular/core": "~8.2.11",
     "@angular/elements": "^8.2.11",
+    "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~8.2.11",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.11",
@@ -23,6 +24,7 @@
     "@angular/service-worker": "^8.2.11",
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "bootstrap": "^4.3.1",
@@ -57,5 +59,6 @@
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "http.proxySupport": "off"
 }
