--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "scripts": {
     "ng": "ng",
-    "debug": "ng build --watch",
-    "build": "ng build --prod"
+    "debug2": "ng build --watch",
+    "build": "ng build --prod",
+    "debug": "ng serve --proxy-config proxy.conf.json"
   },
   "private": true,
   "dependencies": {
