--- a/client/angular.json
+++ b/client/angular.json
@@ -81,8 +81,8 @@
           "options": {
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "src/karma.conf.js",
+            "tsConfig": "tsconfig.spec.json",
+            "karmaConfig": "karma.conf.js",
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
@@ -96,7 +96,7 @@
           "options": {
             "tsConfig": [
               "tsconfig.app.json",
-              "src/tsconfig.spec.json",
+              "tsconfig.spec.json",
               "e2e/tsconfig.json"
             ],
             "exclude": ["**/node_modules/**"]
