--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.1",
   "scripts": {
     "ng": "ng",
-    "debug2": "ng build --watch",
     "build": "ng build --prod",
-    "debug": "ng serve --proxy-config proxy.conf.json"
+    "start": "ng serve --proxy-config proxy.conf.json"
   },
   "private": true,
   "dependencies": {
@@ -27,13 +26,13 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "document-register-element": "^1.13.2",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
-    "ngx-cookie-service": "^2.1.0",
+    "ngx-cookie-service": "^2.2.0",
     "popper.js": "^1.15.0",
     "rxjs": "^6.5.3",
     "tslib": "^1.9.0",
@@ -41,12 +40,12 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.19",
-    "@angular/cli": "~8.3.19",
+    "@angular/cli": "^8.3.19",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
