add localhost https

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
       "name": "Launch Program",
       "runtimeExecutable": "node",
       "program": "${workspaceFolder}/server/server.ts",
-      "preLaunchTask": "npm: debug:server",
+      "preLaunchTask": "npm: start",
       "outFiles": ["${workspaceFolder}/debug/*.js"],
       "restart": false
     }
