--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "build": "ng build --prod",
-    "start": "ng serve --proxy-config proxy.conf.json"
+    "start": "ng serve --ssl --ssl-key ../localhost.key --ssl-cert ../localhost.crt --proxy-config proxy.conf.json"
   },
   "private": true,
   "dependencies": {
