--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "insg.xyz",
   "version": "1.0.0",
   "scripts": {
-    "debug:client": "cd ./client && npm start",
-    "debug:server": "webpack --config ./server/webpack.config.js --colors --mode=development",
-    "build:server": "webpack --config ./server/webpack.config.js --progress --colors --mode=production",
-    "publish": "npm run build:server && cd ./client/ && npm run build",
-    "start": "node ./dist/server.js"
+    "start": "webpack --config ./server/webpack.config.js --colors --mode=development",
+    "build": "webpack --config ./server/webpack.config.js --progress --colors --mode=production",
+    "publish": "npm run build && cd ./client/ && npm run build"
   },
   "repository": {
     "type": "git",
