gifts -> new order

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
       "program": "${workspaceFolder}/server/server.ts",
       "preLaunchTask": "npm: start",
       "outFiles": ["${workspaceFolder}/debug/*.js"],
-      "restart": false
+      "restart": true
     }
   ]
 }
