--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "nodemailer": "^6.3.1",
-    "sqlite3": "^4.1.0"
+    "sqlite3": "^4.1.0",
+    "web-push": "^3.4.2"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
