--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -17,6 +17,10 @@
       {
         "name": "@angular/language-service"
       }
-    ]
+    ],
+    "paths": {
+      "@core/*": ["src/app/core/*"],
+      "@shared/*": ["src/app/shared/*"]
+    }
   }
 }
