--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "build": "ng build --prod",
-    "report": "ng build --prod --stats-json && webpack-bundle-analyzer ../dist/client/stats-es2015.json",
+    "bundle-report": "ng build --prod --stats-json && webpack-bundle-analyzer ../dist/client/stats-es2015.json",
     "start": "ng serve --ssl --ssl-key ../localhost.key --ssl-cert ../localhost.crt --proxy-config proxy.conf.json"
   },
   "private": true,
