--- a/.gitignore
+++ b/.gitignore
@@ -9,13 +9,13 @@
 *~
 
 # compiled output
-/tmp
-/out-tsc
-/coverage
-/debug
+**/tmp
+**/out-tsc
+**/coverage
+**/debug
 
 # dependencies
-/node_modules
+**/node_modules
 
 # IDEs and editors
 /.idea
