--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "@fortawesome/angular-fontawesome": "^0.6.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "ngx-cookie-service": "^2.4.0",
     "ngx-quicklink": "^0.2.0",
     "rxjs": "~6.5.4",
