--- a/client/package.json
+++ b/client/package.json
@@ -12,18 +12,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.5",
-    "@angular/cdk": "^9.1.1",
+    "@angular/cdk": "^9.1.2",
     "@angular/common": "~9.0.5",
     "@angular/compiler": "~9.0.5",
     "@angular/core": "~9.0.5",
     "@angular/forms": "~9.0.5",
-    "@angular/material": "^9.1.1",
+    "@angular/material": "^9.1.2",
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
-    "@fortawesome/angular-fontawesome": "^0.6.0",
-    "@fortawesome/free-solid-svg-icons": "^5.12.1",
-    "ngx-cookie-service": "^2.4.0",
+    "@angular/service-worker": "~9.0.5",
+    "ngx-cookie-service": "^3.0.0",
     "ngx-quicklink": "^0.2.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
