--- a/client/package.json
+++ b/client/package.json
@@ -11,17 +11,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.5",
+    "@angular/animations": "~9.1.0-next.4",
     "@angular/cdk": "^9.1.2",
-    "@angular/common": "~9.0.5",
-    "@angular/compiler": "~9.0.5",
-    "@angular/core": "~9.0.5",
-    "@angular/forms": "~9.0.5",
+    "@angular/common": "~9.1.0-next.4",
+    "@angular/compiler": "~9.1.0-next.4",
+    "@angular/core": "~9.1.0-next.4",
+    "@angular/forms": "~9.1.0-next.4",
     "@angular/material": "^9.1.2",
-    "@angular/platform-browser": "~9.0.5",
-    "@angular/platform-browser-dynamic": "~9.0.5",
-    "@angular/router": "~9.0.5",
-    "@angular/service-worker": "~9.0.5",
+    "@angular/platform-browser": "~9.1.0-next.4",
+    "@angular/platform-browser-dynamic": "~9.1.0-next.4",
+    "@angular/router": "~9.1.0-next.4",
+    "@angular/service-worker": "~9.1.0-next.4",
     "ngx-cookie-service": "^3.0.0",
     "ngx-quicklink": "^0.2.0",
     "rxjs": "~6.5.4",
@@ -29,10 +29,10 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.5",
-    "@angular/cli": "~9.0.5",
-    "@angular/compiler-cli": "~9.0.5",
-    "@angular/language-service": "~9.0.5",
+    "@angular-devkit/build-angular": "~0.901.0-next.2",
+    "@angular/cli": "~9.1.0-next.2",
+    "@angular/compiler-cli": "~9.1.0-next.4",
+    "@angular/language-service": "~9.1.0-next.4",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
