--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser-dynamic": "~9.1.0-next.4",
     "@angular/router": "~9.1.0-next.4",
     "@angular/service-worker": "~9.1.0-next.4",
+    "@fortawesome/angular-fontawesome": "^0.6.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "ngx-cookie-service": "^3.0.0",
     "ngx-quicklink": "^0.2.0",
     "rxjs": "~6.5.4",
