--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "homepage": "https://github.com/seesea2/insg#readme",
   "dependencies": {
+    "@fortawesome/angular-fontawesome": "^0.6.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
