--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "insg.xyz",
   "version": "0.0.1",
   "scripts": {
-    "start": "webpack --config ./server/webpack.config.js --colors --mode=development",
+    "debug": "webpack --config ./server/webpack.config.js --colors --mode=development",
     "build": "webpack --config ./server/webpack.config.js --progress --colors --mode=production",
     "publish": "npm run build && cd ./client/ && npm run build"
   },
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
     "@types/node": "^12.12.26",
