--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "debug": "webpack --config ./server/webpack.config.js --colors --mode=development",
     "build": "webpack --config ./server/webpack.config.js --progress --colors --mode=production",
-    "publish": "npm run build && cd ./client/ && npm run build"
+    "publish": "npm run build && cd ./client/ && npm run build && cd .."
   },
   "repository": {
     "type": "git",
