--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
-  "name": "insg.xyz",
-  "version": "0.0.1",
-  "scripts": {
-    "ts-node": "ts-node",
-    "build": "tsc --build tsconfig.json"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/seesea2/scraper.git"
-  },
-  "author": "yc",
-  "license": "ISC",
-  "homepage": "https://github.com/seesea2/scraper#readme",
-  "dependencies": {
-    "axios": "^0.19.2",
-    "body-parser": "^1.19.0",
-    "cheerio": "^1.0.0-rc.3",
-    "cors": "^2.8.5",
-    "cron": "^1.8.2",
-    "express": "^4.17.1",
-    "sqlite3": "^4.1.1"
-  },
-  "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/cheerio": "^0.22.17",
-    "@types/cors": "^2.8.6",
-    "@types/cron": "^1.7.2",
-    "@types/express": "^4.17.1",
-    "@types/node": "^12.12.26",
-    "@types/sqlite3": "^3.1.6",
-    "ts-node": "^8.6.2",
-    "typescript": "^3.7.5"
-  }
+    "name": "scraper",
+    "version": "1.0.0",
+    "scripts": {
+        "ts-node": "ts-node",
+        "start": "npm run build && node ./dist/server",
+        "build": "tsc --build tsconfig.json"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/seesea2/scraper.git"
+    },
+    "author": "yc",
+    "license": "ISC",
+    "homepage": "https://github.com/seesea2/scraper#readme",
+    "dependencies": {
+        "axios": "^0.19.2",
+        "body-parser": "^1.19.0",
+        "cheerio": "^1.0.0-rc.3",
+        "cors": "^2.8.5",
+        "cron": "^1.8.2",
+        "express": "^4.17.1",
+        "sqlite3": "^4.1.1"
+    },
+    "devDependencies": {
+        "@types/axios": "^0.14.0",
+        "@types/cheerio": "^0.22.17",
+        "@types/cors": "^2.8.6",
+        "@types/cron": "^1.7.2",
+        "@types/express": "^4.17.1",
+        "@types/node": "^12.12.26",
+        "@types/sqlite3": "^3.1.6",
+        "ts-node": "^8.6.2",
+        "typescript": "^3.7.5"
+    }
 }
